<feature>:configured the user auth with RBA

--- a/OAuth Node/public/index.html
+++ b/OAuth Node/public/index.html
@@ -11,5 +11,7 @@
     <a href="/secret">Show me!</a>
     <a href="/auth/google">Google Login</a>
     <a href="/auth/logout">logout</a>
+    <a href="/auth/admin">adminBhaiya</a>
+    <a href="/auth/user">becharaUser</a>
 </body>
 </html>
